--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "ExpressJS API for the Cohort Tools app",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +20,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
